[package]
name = "lexer"
version = "0.1.14"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["text", "parsing", "plugin", "lexical", "reader"]
categories = ["parsing", "text-processing"]

description = "plugin based lexical reader"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-lexer.git"
homepage = "https://gitlab.com/nathanfaucett/rs-lexer"

[dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
peek-nth = "0.1"

[dev-dependencies]
