[package]
name = "lexer"
version = "0.1.17"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["text", "parsing", "plugin", "lexical", "reader"]
categories = ["parsing", "text-processing"]

description = "plugin based lexical reader"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/aicacia/rs-lexer.git"
homepage = "https://github.com/aicacia/rs-lexer"

[dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
peek-nth = "0.2"

[dev-dependencies]
lisp = { version = "0.1", path = "./lisp" }

[workspace]
members = [
  "lisp"
]