[package]
name = "lexer"
version = "0.1.18"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["text", "parsing", "plugin", "lexical", "reader"]
categories = ["parsing", "text-processing"]

description = "plugin based lexical reader"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/aicacia/rs-lexer.git"
homepage = "https://github.com/aicacia/rs-lexer"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
peek-nth = "0.2"

[workspace]
members = [
  "lisp"
]