[package]
name = "lisp"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

description = "a lisp tokenizer"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-lisp.git"
homepage = "https://gitlab.com/nathanfaucett/rs-lisp"

[dependencies]
lexer = { version = "0.1", path = ".." }

[dev-dependencies]